5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1671_1103.log
== TEST (2019-04-24 15:09:51) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")

elif (a > x > b) or (b <= a)
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- ERROR:
File "XXXX", line 8
    elif (a > x > b) or (b <= a)
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:10:13) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")

elif (a > x > b) or (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:10:34) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")

elif (a > x > b) or (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- EXECUTION TIME:
0.181703
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas a e b invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
x nao pertence ao intervalo
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
x pertence ao intervalo a, b
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:11:35) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

x = 2
a = 1
b = 3

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")

elif (a > x > b) or (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- OUTPUT:
x pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:14:08) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

x = 2
a = 1
b = 3

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")
elif (a > x > b) or (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- EXECUTION TIME:
0.144021
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
x pertence ao intervalo a, b
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
x pertence ao intervalo a, b
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
x pertence ao intervalo a, b
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:14:09) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

x = 2
a = 1
b = 3

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")
elif (a > x > b) or (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- OUTPUT:
x pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:17:19) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

x = 2
a = 1
b = 3

if (a <= x <= b):
	print(" x pertence ao intervalo a, b")
elif (a > x > b) and (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- OUTPUT:
x pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 15:33:38) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

x = 2
a = 1
b = 3

if ((a <= x <= b)):
	print(" x pertence ao intervalo a, b")
elif (a > x > b) and (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- OUTPUT:
x pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 15:33:48) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

x = 2
a = 1
b = 3

if ((a <= x <= b)):
	print(" x pertence ao intervalo a, b")
elif (a > x > b) and (b <= a):
	print(" x nao pertence ao intervalo ")
else:
	print(" Entradas a e b invalidas")

-- EXECUTION TIME:
0.187261
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
x pertence ao intervalo a, b
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
x pertence ao intervalo a, b
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
x pertence ao intervalo a, b
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:27:16) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(" x pertence ao intervalo a, b")
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(" x nao pertence ao intervalo a, b")
	

-- OUTPUT:
x nao pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:27:23) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(" x pertence ao intervalo a, b")
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(" x nao pertence ao intervalo a, b")
	

-- EXECUTION TIME:
0.133759
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
x nao pertence ao intervalo a, b
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
x pertence ao intervalo a, b
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:27:45) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(" x pertence ao intervalo a, b")
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(" x nao pertence ao intervalo a, b")
	

-- OUTPUT:
x nao pertence ao intervalo a, b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:28:55) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, b)
	

-- EXECUTION TIME:
0.133873
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:28:56) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, b)
	

-- EXECUTION TIME:
0.180197
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:28:57) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, b)
	

-- EXECUTION TIME:
0.159648
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:28:57) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, b)
	

-- EXECUTION TIME:
0.219732
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:28:57) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, b)
	

-- EXECUTION TIME:
0.247989
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas a e b invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
6.5 pertence ao intervalo 1.1 22.2
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:28:57) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, b)
	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:29:39) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.18178
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:29:40) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.173754
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:29:40) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.224854
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:29:40) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:30:00) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.164758
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:30:43) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.215835
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:30:44) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.146691
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:30:44) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.199502
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:

-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:30:44) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.18591
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Leia numero real de x: Leia o numero real de a: Leia o numero real de b:Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Leia numero real de x: Leia o numero real de a: Leia o numero real de b:6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:30:44) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.174338
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Leia numero real de x: Leia o numero real de a: Leia o numero real de b:Entradas a e b invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
Leia numero real de x: Leia o numero real de a: Leia o numero real de b:6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 12:31:12) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b > a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- OUTPUT:
Entradas a e b invalidas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:31:20) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b > a):
	print("Entradas a e b invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.167526
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
Entradas a e b invalidas
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:32:10) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas", a, "e", b, "invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.195581
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 12:32:11) 
-- CODE:
x = float(input("Leia numero real de x: "))
a = float(input("Leia o numero real de a: "))
b = float(input("Leia o numero real de b:"))

if ((a <= x and x <= b)):
	print(x , "pertence ao intervalo", a, ",", b)
elif (b <= a):
	print("Entradas", a, "e", b, "invalidas")
else:
	print(x , "nao pertence ao intervalo", a, ",", b)
	

-- EXECUTION TIME:
0.154838
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
